<resources>
    <string name="app_name">OrangeTask</string>
    <string name="alert">Alert</string>
    <string name="error">Error</string>
    <string name="choose_app_language">Choose Preferred Language</string>
    <string name="english_language">English Language</string>
    <string name="arabic_language">Arabic Language</string>
    <string name="device_language">Device Language</string>
    <string name="choose_theme">Choose Preferred Theme</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="author">Author</string>
    <string name="open_in_browser">open in Browser</string>
    <string name="details">Details</string>
    <string name="no_articles_founded">No articles founded</string>
    <string name="you_can_see_more_on">You can see more details in</string>
    <string name="added_to_fav_successfully">Added To Favourites</string>
    <string name="source">Source</string>
    <string name="favourites">Favourites</string>
    <string name="remove">Remove</string>
    <string name="removed_from_fav">Removed From Favourites</string>
    <string name="no_items_found_nuse_search_to_fetch_more">No Items Found\nUse Search to fetch more</string>
</resources>