<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="listener"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">


            <TextView
                android:id="@+id/lblChooseLangTAG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:fontFamily="@font/font1"
                android:text="@string/choose_app_language"
                android:textColor="?attr/colorPrimary"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias=".1" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardEnglish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="@{v->listener.onClick(v)}"
                app:cardCornerRadius="@dimen/_30sdp"
                app:cardElevation="@dimen/_1sdp"
                app:contentPadding="@dimen/_5sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lblChooseLangTAG">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/imageEnglish"
                        android:layout_width="@dimen/_50sdp"
                        android:layout_height="@dimen/_55sdp"
                        android:src="@drawable/ic_english"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/font1"
                        android:text="@string/english_language"
                        android:textSize="@dimen/_15ssp"
                        app:layout_constraintBottom_toBottomOf="@id/imageEnglish"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias=".4"
                        app:layout_constraintStart_toEndOf="@id/imageEnglish"
                        app:layout_constraintTop_toTopOf="@id/imageEnglish" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardArabic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="@{v->listener.onClick(v)}"
                app:cardCornerRadius="@dimen/_30sdp"
                app:cardElevation="@dimen/_1sdp"
                app:contentPadding="@dimen/_5sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardEnglish">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/imageArabic"
                        android:layout_width="@dimen/_50sdp"
                        android:layout_height="@dimen/_55sdp"
                        android:src="@drawable/ic_arabic"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/font1"
                        android:text="@string/arabic_language"
                        android:textSize="@dimen/_15ssp"
                        app:layout_constraintBottom_toBottomOf="@id/imageArabic"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias=".4"
                        app:layout_constraintStart_toEndOf="@id/imageArabic"
                        app:layout_constraintTop_toTopOf="@id/imageArabic" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardDevice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="@{v->listener.onClick(v)}"
                app:cardCornerRadius="@dimen/_30sdp"
                app:cardElevation="@dimen/_1sdp"
                app:contentPadding="@dimen/_5sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardArabic">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/imagePhone"
                        android:layout_width="@dimen/_50sdp"
                        android:layout_height="@dimen/_55sdp"
                        android:src="@drawable/ic_device"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/font1"
                        android:text="@string/device_language"
                        android:textSize="@dimen/_15ssp"
                        app:layout_constraintBottom_toBottomOf="@id/imagePhone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias=".4"
                        app:layout_constraintStart_toEndOf="@id/imagePhone"
                        app:layout_constraintTop_toTopOf="@id/imagePhone" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/lblChooseThemeTAG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/font1"
                android:text="@string/choose_theme"
                android:textColor="?attr/colorPrimary"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold"
                android:visibility="gone" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:visibility="gone"
                app:cardCornerRadius="@dimen/_30sdp"
                app:cardElevation="@dimen/_1sdp"
                app:contentPadding="@dimen/_5sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lblChooseThemeTAG">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:showText="true" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>